# Little-File-System

./: .gitignore  CMakeLists.txt  README.md  design.txt  main.cpp  remove_dir.cpp  remove_root_dir.cpp
_tests/_test_files/: basic_test.cpp  testB.cpp  test_directory_tree.cpp  test_file_folder_io.cpp  test_lib.cpp  test_lib_app.cpp  test_parser.cpp
app/app_include_test/: app_include_test.cpp
app/command_line/: command_line.cpp  command_line.h
includes/app/command_line/: command_line.cpp  command_line.h
includes/app/directory_tree/: directory_tree.cpp  directory_tree.h
includes/button/: button.h  buttons.cpp  buttons.h
includes/cmd_parser/: cmd_parser.cpp  cmd_parser.h
includes/command_line/: command_line.cpp  command_line.h
includes/components/cmd_parser/: cmd_parser.cpp  cmd_parser.h
includes/components/directory_tree/directory_tree/: directory_tree.cpp  directory_tree.h
includes/components/directory_tree/nary_node/: nary_node.h
includes/components/directory_tree/nary_tree/: nary_tree.cpp  nary_tree.h
includes/components/folder_file_manager/: folder_file_manager.cpp  folder_file_manager.h
includes/components/lib_include_test/: lib_include_test.h
includes/components/nary_tree/nary_node/: nary_node.cpp  nary_node.h
includes/components/nary_tree/nary_tree/: nary_tree.cpp  nary_tree.h
includes/components/nary_tree/nary_tree_functions/: nary_tree_functions.cpp
includes/components/text_file_tokenizer/: info.h  text_file_tokenizer.cpp  text_file_tokenizer.h
includes/components/trie_node/: trie_node.h
includes/components/utils/: helper_functions.cpp
includes/config/: config.cpp  config.h  system.h
includes/core/button/: buttons.h
includes/core/config/: system.h
includes/core/engine/: engine.cpp  engine.h
includes/core/header/: header.cpp
includes/core/input_box/: input_box.cpp
includes/directory_tree/: directory_tree.h
includes/engine/: engine.cpp  engine.h
includes/folder_file_manager/: folder_file_manager.cpp  folder_file_manager.h
includes/header/: header.h
includes/helper/: helper_functions.cpp  helper_functions.h
includes/input_box/: input_box.cpp  input_box.h
includes/middleware/: middleware.cpp  middleware.h
includes/nary_tree/: nary_tree.h  nary_tree_functions.h
includes/retrieve_data/: retrieve_data.cpp  retrieve_data.h
includes/text_file_tokenizer/: info.h  text_file_tokenizer.h
includes/utils/helper/: helper_functions.cpp  helper_functions.h
includes/utils/middleware/: middleware.cpp
lib/cmd_parser/: cmd_parser.cpp  cmd_parser.h
lib/directory_tree/: nary_tree.cpp  nary_tree.h
lib/directory_tree/nary_node/: nary_node.cpp  nary_node.h
lib/directory_tree/nary_tree/: nary_tree.h
lib/directory_tree/nary_tree_functions/: nary_tree_functions.cpp  nary_tree_functions.h
lib/folder_file_manager/: folder_file_manager.cpp  folder_file_manager.h
lib/lib_include_test/: lib_include_test.cpp
lib/trie/: trie.h
lib/trie_node/: trie_node.h
lib/utils/: helper_functions.cpp  helper_functions.h
root/: delete_all_file.txt  delete_all_folder.txt  test.txt
